--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "tw-elements": "^1.0.0-beta3"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
